# db_sync

./: .gitignore  .ignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build_nix.yml  release.yml
src/: main.rs
