[package]
name = "db_sync"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
postgres = "0.19.5"
pg_query = "0.7"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.7.6"
