[package]
name = "db_sync"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
pg_query = "5.1.0"
postgres = "0.19.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
